--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
+    "mongodb": "^3.6.3",
     "parse-domain": "^3.0.3",
     "require-all": "^3.0.0",
     "yarn.lock": "0.0.1-security"
