--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "mongodb": "^3.6.4",
+    "package.json": "^2.0.1",
     "parse-domain": "^3.0.3",
     "require-all": "^3.0.0",
     "uuid": "^8.3.2"
