--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,12 @@
   "repository": "git@github.com:92bondstreet/clear-fashion.git",
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "helmet": "^4.4.1",
     "mongodb": "^3.6.4",
     "package.json": "^2.0.1",
